# media-to-speech

./: .dockerignore  .env.example  .gitignore  COMPREHENSIVE_SERVICE_INTEGRATION_AUDIT.md  Dockerfile  FINAL_SERVICE_INTEGRATION_VERIFICATION.md  README.md  SERVICE_INTEGRATION_FIXES.md  docker-compose.simple.yml  docker-compose.yml  fix-network-conflict.sh  pyproject.toml
.taskmaster/: config.json
.taskmaster/docs/: prd.txt
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: task_001.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  task_011.txt  task_012.txt  task_013.txt  task_014.txt  task_015.txt  task_016.txt  tasks.json  tasks.json.bak
config/: prometheus.yml  redis.conf
docs/: CRASH_RECOVERY.md  DOCKER_COMPOSE.md
src/media_to_text/: __init__.py  config.py  logging.py  main.py  models.py
src/media_to_text/routers/: __init__.py  health.py  jobs.py  transcriptions.py
src/media_to_text/services/: __init__.py  cleanup_service.py  ffmpeg_service.py  job_worker.py  openai_service.py  redis_service.py  transcript_service.py
tests/: CHAOS_TESTING.md  conftest.py  requirements-test.txt  run_chaos_tests.py  test_api_endpoints.py  test_chaos_recovery.py  test_ffmpeg_service.py  test_integration.py  test_load.py  test_redis_service.py  test_transcript_service.py
